remove switch
