# HW9/blog-RoR-api/swagger/v1/swagger.yaml
@@ -248,31 +248,6 @@ paths:
       responses:
         '200':
           description: successful
-  "/api/v1/comments/{id}/switch":
-    parameters:
-    - name: id
-      in: path
-      description: id
-      required: true
-      schema:
-        type: string
-    - name: status
-      in: query
-      schema:
-        type: string
-        enum:
-        - unpublished
-        - published
-      description: 'Get comments with status: published/unpublished.'
-    patch:
-      summary: switch_status comment
-      tags:
-      - Comments
-      responses:
-        '200':
-          description: successful
-        '500':
-          description: Not valid status
   "/api/v1/comments":
     get:
       summary: list comments
@@ -301,7 +276,7 @@ paths:
       - Comments
       parameters: []
       responses:
-        '200':
+        '201':
           description: successful
       requestBody:
         content:
@@ -335,67 +310,6 @@ paths:
       responses:
         '200':
           description: successful
-    patch:
-      summary: update comment
-      tags:
-      - Comments
-      parameters: []
-      responses:
-        '200':
-          description: successful
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                body:
-                  type: string
-                status:
-                  type: string
-                  enum:
-                  - unpublished
-                  - published
-                author_id:
-                  type: integer
-                articler_id:
-                  type: integer
-              required: false
-    put:
-      summary: update comment
-      tags:
-      - Comments
-      parameters: []
-      responses:
-        '200':
-          description: successful
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                body:
-                  type: string
-                status:
-                  type: string
-                  enum:
-                  - unpublished
-                  - published
-                author_id:
-                  type: integer
-                articler_id:
-                  type: integer
-              required: false
-    delete:
-      summary: delete comment
-      tags:
-      - Comments
-      responses:
-        '200':
-          description: successful
-        '404':
-          description: invalid request
 servers:
 - url: http://{defaultHost}
   variables:
